# RLProj

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.jetson  Dockerfile.rocm  Dockerfile.ros2  FIX_TESTS.md  INSTALL.md  KNOWN_GAPS.md  LICENSE  QUICKSTART.md  QUICK_DEMO.md  README.md  START_HERE.md  conftest.py  demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_simple.py  verify_step1.py
.claude/: settings.local.json
.claude/skills/: parallel-plan.md  test-merge.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.3.0-MILESTONE-AUDIT.md  v0.3.1-MILESTONE-AUDIT.md  v0.3.2-MILESTONE-AUDIT.md  v0.4.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ci-failures-lint-pybullet.md  gui-no-render-under-mjpython.md  ppo-demo-mujoco-dof-limit.md
.planning/milestones/: v0.0.0-BUGFIX_LOG.md  v0.0.0-DEVELOPMENT_GUIDE.md  v0.0.0-PRESENTATION.md  v0.0.0-QUICKSTART.md  v0.0.0-README.md  v0.0.0-START_HERE.md  v0.0.0-VERIFICATION.md  v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-MILESTONE-AUDIT.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md  v0.3.0-REQUIREMENTS.md  v0.3.1-REQUIREMENTS.md  v0.3.1-ROADMAP.md  v0.3.2-REQUIREMENTS.md  v0.3.2-ROADMAP.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v0.4.1-MILESTONE-AUDIT.md  v0.4.1-REQUIREMENTS.md  v0.4.1-ROADMAP.md  v0.4.2-REQUIREMENTS.md  v0.4.2-ROADMAP.md  v0.5.0-REQUIREMENTS.md
.planning/milestones/v0.0.0-superpowers-plans/: 2026-04-24-simulator-robustness.md
.planning/phases/01-critical-bug-fixes/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY-task1.md  01-02-SUMMARY-task2.md  01-02-SUMMARY-task3.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-UAT.md
.planning/phases/02-action-space-gripper/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-UAT.md
.planning/phases/03-simulator-robustness/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-UAT.md
.planning/phases/04-task-geometry-real-assets/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-REVIEW.md  04-UAT.md
.planning/phases/05-experiment-tracking-infrastructure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-REVIEW.md  05-UAT.md
.planning/phases/06-hardware-acceleration/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-VALIDATION.md  06-hardware-acceleration-CONTEXT.md  06-hardware-acceleration-RESEARCH.md
.planning/research/: ARCHITECTURE-v0.4.0.md  ARCHITECTURE-v0.5.0.md  ARCHITECTURE.md  FEATURES-v0.5.0.md  FEATURES.md  PITFALLS-v0.5.0.md  PITFALLS.md  STACK-v0.5.0.md  STACK.md  SUMMARY-v0.4.0.md  SUMMARY-v0.5.0.md  SUMMARY.md
.planning/tmp/: docs-work-manifest.json
configs/: default_config.yaml  ros2_control.yaml
demos/: NARRATION_TEMPLATE.md  README.md  __init__.py  _common.py  _omp_compat.py  _platform_guard.py  benchmark.py  capture_demo_gif.py  capture_demo_gif_ffmpeg.py  demo.py  eval_demo.py  knot_tying_demo.py  needle_passing_demo.py  suturing_demo.py  train_demo.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DYNAMICS_API.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  README.md  SCENE_FORMAT.md  SOFTBODY_PLAN.md  STATUS.md  STEP1_SUMMARY.md  STEP3_INSTRUCTIONS.md  TESTING.md  TROUBLESHOOTING.md
docs/adr/: 0001-organ-mesh-licensing.md  README.md
docs/research/: organ-mesh-licensing.md
examples/: basic_usage.py  rl_evaluation.py  rl_training.py  visualize_scene.py
experiments/: test_bench.yaml
k8s/base/: configmap.yaml  kustomization.yaml  pvc.yaml  raycluster.yaml  rayjob.yaml  rbac.yaml  secret.yaml  training-job.yaml
launch/: bridge.launch.py  replay.launch.py
notebooks/: Surg_RL_Demo.ipynb
scene_visualizations/: Minimal_Test_Scene_report.txt  Minimal_Test_Scene_summary.json
scenes/: cutting.json  dissection.json  grasping.json  knot_tying.json  laparoscopic_dissection.yaml  minimal_scene.json  needle_insertion.json  needle_passing.json  simple_suturing.json  suturing_demo.json
src/surg_rl/: __init__.py  cli.py  render_thread.py
tests/: __init__.py  conftest.py  test_action_reconciliation.py  test_benchmark_plots.py  test_benchmark_scenes.py  test_ci_config.py  test_cli.py  test_cli_integration.py  test_config.py  test_cutting.py  test_deformable.py  test_demos.py  test_difficulty_blocks.py  test_difficulty_config.py  test_difficulty_levels.py  test_discrete_curriculum.py  test_doc_assets.py  test_dockerfile_layer_order.py  test_dreamer_benchmark_integration.py  test_dreamer_checkpoints.py  test_dreamer_evaluate_checkpoint.py  test_dreamer_spike.py  test_dreamer_subprocess.py  test_dreamer_training.py  test_dreamer_wrapper.py  test_dynamics.py  test_environment_controller.py  test_field_renderer.py  test_file_operations.py  test_fluid_step.py  test_gpu_detector.py  test_gpu_integration.py  test_gui_foundation.py  test_gui_scaffold.py  test_imports.py  test_k8s_overlay_builds.py  test_kubernetes_manifests.py  test_lazy_imports.py  test_loader.py  test_logging.py  (+42 more)
tests/dreamer/: test_dreamerv3_subprocess_e2e.py
tests/gui/: conftest.py  test_editor_smoke.py
tests/integration/: __init__.py  test_suturing_hard_env_construction.py
tests/k8s/: test_pvc_e2e.py
tests/manual/: test_pybullet_soft_body.py
tests/test_fluids/: test_2d_baseline.py  test_3d_coupling.py  test_fluid_simulator.py  test_force_computation.py  test_nan_regression.py  test_render_fluid_3d.py  test_schema.py
tests/unit/: test_rendering.py
(+423 files in other folders)
