[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surg-rl"
version = "0.1.0"
description = "AI-powered surgical robotics scene generation and RL training system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Surgical RL Team"}
]
keywords = ["surgical-robotics", "reinforcement-learning", "simulation", "mujoco", "pybullet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Applications",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # Simulation backends
    "mujoco>=3.0.0",
    "pybullet>=3.2.5",
    
    # RL training
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    
    # Scene generation - LLM integration
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    
    # Image processing
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    
    # Configuration and schema
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    
    # CLI
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

meshing = [
    "pyvista>=0.43",
]

vision = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
]

tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.10.0",
]

distributed = [
    "ray[rllib]>=2.10",
    "tune-sklearn>=0.4.6",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
surg-rl = "surg_rl.cli:app"

[project.urls]
Homepage = "https://github.com/surg-rl/surg-rl"
Documentation = "https://surg-rl.readthedocs.io"
Repository = "https://github.com/surg-rl/surg-rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
