[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surg-rl"
version = "0.1.0"
description = "AI-powered surgical robotics scene generation and RL training system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Surgical RL Team"}
]
keywords = ["surgical-robotics", "reinforcement-learning", "simulation", "mujoco", "pybullet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Applications",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # Simulation backends
    "mujoco>=3.0.0",
    "pybullet>=3.2.5",
    
    # RL training
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    
    # Scene generation - LLM integration
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    
    # Image processing
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    
    # Configuration and schema
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    
    # CLI
    "typer>=0.9.0",
]

[project.optional-dependencies]
# Real surgical mesh assets — OBJ loading + decimation
assets = [
    "trimesh>=4.5.0",
]

# Performance benchmarking — plots, statistics, reports
benchmark = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "rliable>=1.0.8",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

# Multi-agent RL — PettingZoo ParallelEnv + SuperSuit SB3 wrappers
marl = [
    "pettingzoo>=1.24.0",
    "supersuit>=3.9.0",
]

meshing = [
    "tetgen>=0.8.4",
]

simulation = [
    "phiflow>=3.4.0",
    "scikit-image>=0.21.0",
]

vision = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
]

tracking = [
    "wandb>=0.16.0",
    "mlflow>=2.10.0",
]

# Ray/RLlib: pip-installable, requires Python >=3.10
distributed = [
    "ray[rllib]>=2.10",
    "dm-tree>=0.1.8",
    "tune-sklearn>=0.4.6",
]

# DreamerV3 world models — JAX subprocess training (process-isolated)
# jax + dreamerv3 use ~= (volatile APIs per RESEARCH Phase 24 findings)
dreamer = [
    "jax~=0.4.20",
    "optax>=0.1.7",
    "dreamerv3~=1.5.0",
]

# GUI scene editor — PySide6 6.8 LTS line + markdown rendering
# PySide6 is LGPL-3-or-GPL; we pin >=6.8,<7.0 for Qt6.8 LTS (Oct 2026) + Qt6.11 current
# markdown-it-py was already a transitive dep; promoted to explicit
# Phase 33 builds the QMainWindow on top of this scaffolding (Phase 31 plan 04).
gui = [
    "PySide6>=6.8.0,<7.0",
    "markdown-it-py>=3.0.0",
    "imageio>=2.31.0",
]

# ros2: apt deps required (rclpy, sensor-msgs, geometry-msgs, std-msgs)
# Install: sudo apt install ros-humble-rclpy ros-humble-sensor-msgs ros-humble-geometry-msgs ros-humble-std-msgs
# Then: source /opt/ros/humble/setup.bash
ros2 = [
    "PyYAML>=6.0",
    "launch",
    "launch_ros",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
surg-rl = "surg_rl.cli:app"
bridge_node = "surg_rl.ros2.bridge_node:main"
replay_node = "surg_rl.ros2.replay_node:main"

# GUI scene editor — separate entry point to preserve the 14-subcommand
# surg-rl CLI's lazy-import contract (Pitfall P10: GUI is NOT a Typer
# subcommand). Phase 31 plan 04 ships this entry; Phase 33 wires the
# actual QApplication + MainWindow.
surg-rl-gui = "surg_rl.editor.app:main"

[project.urls]
Homepage = "https://github.com/surg-rl/surg-rl"
Documentation = "https://surg-rl.readthedocs.io"
Repository = "https://github.com/surg-rl/surg-rl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/surg_rl/launch" = ["launch/bridge.launch.py", "launch/replay.launch.py"]
"share/surg_rl/config" = ["configs/ros2_control.yaml"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

# The demo scripts import the OpenMP-compat shim (`_omp_compat`) before
# any other module. This deliberate out-of-order import triggers ruff's
# I001 (import sorting) which can't be locally suppressed with `# noqa`.
# The shim import must stay first; the alternative ordering produces the
# "OMP: Error #15: libomp.dylib already initialized" crash on macOS.
[tool.ruff.lint.per-file-ignores]
"demos/*.py" = ["I001"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
